--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "email": "levin.penza@yandex.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "tightenco/collect": "^9.52"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.3"
+    }
 }
